--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,7 @@ font-family: 'Lexend Deca', sans-serif; */
 body{
     font-size: 15px;
     background-color: var(--Very-light-gray);
+    font-family: 'Big Shoulders Display', cursive;
 }
 .container{
     display: flex;
@@ -55,13 +56,13 @@ button{
     /* color: transparent; */
     /* -webkit-background-clip: text; */
     /* background-clip: text; */
-    transition: all .5s;
     border-radius: 25px;
     border:2px solid white;
     /* background-color: var(--Very-light-gray); */
     font-size: 15px;
     text-transform: capitalize;
-    font-weight: 400;
+    font-weight: 700;
+    cursor: pointer;
 }
 
 img{
@@ -76,7 +77,7 @@ img{
     color: var(--bright-orange);
 }
 
- h2{
+ h1{
     color: var(--Very-light-gray);
     margin: 1.2rem auto;
     text-transform: uppercase;
